--- a/sass/modules/post-card/_post-details.scss
+++ b/sass/modules/post-card/_post-details.scss
@@ -209,6 +209,8 @@
         @include transition;
         background-color: $black;
         color: $white;
+        background: $primary-color;
+        border-color: $primary-color;
       }
     }
   }
